# IEEE-RAS-SIGHT-Humanitarian-Robotics-Automation-Technology-Challenge

./: README.md
controller/: CMakeLists.txt  package.xml
controller/include/controller/: holonomic_control.h  pid_controller.h
controller/launch/: mine_detection.launch  move_base.launch
controller/src/: holonomic_control.cpp  pid_controller.cpp  temp.cpp
main_controller/: CMakeLists.txt  package.xml
main_controller/src/: main_rover_control.cpp  mine_detection.cpp  obstacle_avoidance.cpp
