<?xml version="1.0"?>
<package>
  <name>main_controller</name>
  <version>0.0.0</version>
  <description>The main_controller package</description>

  <maintainer email="mandeep@todo.todo">mandeep</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pid_controller</build_depend>
  <build_depend>holonomic_control</build_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pid_controller</run_depend>
  <run_depend>holonomic_control</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
